apps/argocd/kustomization-runtime/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
  labels:
    gateway-access: private
